--- a/scss/style.css
+++ b/scss/style.css
@@ -113,6 +113,7 @@ nav ul li:nth-child(1) a:hover {
 
 .dropdown-content a {
   display: block ruby;
+  width: 100%;
   color: black;
   text-decoration: none;
   font-size: 17px;
@@ -184,6 +185,9 @@ nav ul li:nth-child(1) a:hover {
     background-color: rgba(255, 255, 255, 0);
     border: white 2px solid;
     border-radius: 0px 30px 30px 30px;
+  }
+  .buyNow a {
+    color: white;
   }
   .buyNow:hover {
     text-decoration: none;
