--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,6 +107,7 @@ nav ul li:nth-child(1) a:hover{
 
 .dropdown-content a{
   display: block ruby;
+  width: 100%;
   color: black;
   text-decoration: none;
   font-size: 17px;
@@ -184,6 +185,10 @@ nav ul li:nth-child(1) a:hover{
     background-color: rgba(255, 255, 255, 0);
     border: rgb(255, 255, 255) 2px solid;
     border-radius: 0px 30px 30px 30px;
+  }
+
+  .buyNow a{
+    color: white;
   }
 
   .buyNow:hover{
