--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1346,14 +1346,14 @@ nav ul li:nth-child(1) a:hover{
 }
 
 .offImg{
-  display: ruby-text-container;
+  display: inline-block;
   width: 32%;
 }
 
 .offImg img{
   width: 100%;
   position: relative;
-  bottom: -96px;
+  bottom: -95px;
 }
 
 .offBook{
